# Lung-Diseases-Classification

./: .gitignore  Dataset  Lung Diseases Classification.ipynb  Lung_Diseases_Classification.ipynb  README.md  VSCODE_SETUP.md  app.py  dev-requirements.txt  lung_diseases_classification.py  model.py  pyproject.toml  requirements.txt  run_app.py  setup.py  simple_app.py  simple_model.py  start_app.py  test_setup.py
templates/: base.html  index.html  result.html
