[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lung-diseases-classification"
version = "1.0.0"
description = "Lung Diseases Classification using Machine Learning and Deep Learning"
authors = [
    {name = "Shahadat Rizon"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tensorflow>=2.10.0",
    "scikit-learn>=1.2.0",
    "xgboost>=1.7.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "Pillow>=9.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "pandas>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "pylint>=2.15.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pylint.messages_control]
disable = [
    "too-many-arguments",
    "too-many-locals",
    "too-many-instance-attributes",
    "import-error",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true